Update Pagina principale Richie.html

--- a/Pagina principale Richie.html
+++ b/Pagina principale Richie.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benvenuto alla Mia Pagina</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Attraction&display=swap" rel="stylesheet">
 
     <style>
-        /* Stili di base per la pagina */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -23,10 +23,10 @@
             overflow: hidden;
             color: #333;
             position: relative;
-            background-image: url('https://img.freepik.com/foto-gratuito/un-modello-con-nuvole-su-sfondo-blu_1268-31771.jpg?t=st=1729970293~exp=1729973893~hmac=fe4f979c7166e04440ae7eae670460a709a1cb572236f5aaeb899a462cf259dc&w=2000');
+            background-image: url('https://img.freepik.com/foto-gratuito/un-modello-con-nuvole-su-sfondo-blu_1268-31771.jpg');
             background-size: cover;
             background-position: center;
-            animation: moveBackground 30s linear infinite; /* Animazione per lo sfondo */
+            animation: moveBackground 30s linear infinite;
         }
 
         @keyframes moveBackground {
@@ -34,7 +34,7 @@
             100% { background-position: 100% 0; }
         }
 
-        /* Hexagon container for "Richie Gullivard" */
+        /* ESAGONO */
         .hexagon-container {
             width: 300px;
             height: 174px;
@@ -48,7 +48,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+            text-shadow: -2px -2px 0 #000, 2px -2px 0 #000,
+                         -2px 2px 0 #000, 2px 2px 0 #000;
         }
 
         .hexagon-container:before,
@@ -70,7 +71,7 @@
             border-top: 87px solid #ff6f61;
         }
 
-        /* Contenuto principale */
+        /* CONTENUTO */
         .content {
             max-width: 800px;
             padding: 20px;
@@ -79,45 +80,46 @@
             border-radius: 15px;
             position: relative;
             z-index: 1;
+            margin-top: 20px;
         }
 
-        /* Stile dei pulsanti */
+        /* PULSANTI */
         .button {
             position: absolute;
-            padding: 25px 40px; /* Pulsanti più grandi */
-            background-color: #ffd700; /* Colore di sfondo giallo */
-            color: #00f; /* Testo blu elettrico */
+            padding: 25px 40px;
+            background-color: #ffd700;
+            color: #0000ff;
             text-decoration: none;
-            border-radius: 50%; /* Forma rotonda per i pulsanti */
-            border: 2px solid black; /* Contorno nero */
+            border-radius: 50%;
+            border: 2px solid black;
             font-weight: bold;
-            font-size: 1.5em; /* Aumentata la dimensione del testo */
+            font-size: 1.3em;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: box-shadow 0.3s ease, transform 0.3s ease;
         }
-        .btn1 {
-            transform: translate(-240px, 120px); /* Centra i pulsanti */
-        }
-        .btn2 {
-            transform: translate(40px, 120px); /* Centra i pulsanti */
-        }
 
-        /* Posizionamento dei pulsanti in cerchio */
+        /* POSIZIONAMENTO E ROTAZIONE */
         .button:nth-of-type(1) {
             top: 50%;
             left: 50%;
-            animation: rotate1 5s linear; /* Rotazione continua */
-            transform-origin: -200px; /* Aumentato per una rotazione più ampia */
+            animation: rotate1 6s linear infinite;
+            transform-origin: -200px;
         }
 
         .button:nth-of-type(2) {
             top: 50%;
             left: 50%;
-            animation: rotate2 6s linear; /* Rotazione continua */
-            transform-origin: -220px; /* Aumentato per una rotazione più ampia */
+            animation: rotate2 7s linear infinite;
+            transform-origin: -220px;
         }
 
-        /* Animazioni per i pulsanti */
+        .button:nth-of-type(3) {
+            top: 50%;
+            left: 50%;
+            animation: rotate3 8s linear infinite;
+            transform-origin: -240px;
+        }
+
         @keyframes rotate1 {
             from { transform: rotate(0deg) translate(-200px) rotate(0deg); }
             to { transform: rotate(360deg) translate(-200px) rotate(-360deg); }
@@ -128,36 +130,41 @@
             to { transform: rotate(360deg) translate(-220px) rotate(-360deg); }
         }
 
-        /* Interruzione della rotazione al passaggio del mouse */
+        @keyframes rotate3 {
+            from { transform: rotate(0deg) translate(-240px) rotate(0deg); }
+            to { transform: rotate(360deg) translate(-240px) rotate(-360deg); }
+        }
+
+        /* HOVER */
         .button:hover {
-            animation-play-state: paused; /* Ferma l'animazione al passaggio del mouse */
-            background-color: #ff6f61; /* Cambia colore al passaggio del mouse */
-            color: #fff; /* Colore del testo */
+            animation-play-state: paused;
+            background-color: #ff6f61;
+            color: white;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
         }
 
-        /* Effetto scintillio con ::before e ::after */
-        .button::before, .button::after {
+        /* SCINTILLE */
+        .button::before,
+        .button::after {
             content: '';
             position: absolute;
             width: 6px;
             height: 6px;
             background-color: #ffd700;
             border-radius: 50%;
-            box-shadow: 0 0 8px rgba(255, 255, 0, 0.7), 0 0 12px rgba(255, 255, 0, 0.5);
+            box-shadow: 0 0 8px rgba(255, 255, 0, 0.7),
+                        0 0 12px rgba(255, 255, 0, 0.5);
             animation: sparkle 1.5s infinite alternate;
         }
 
         .button::before {
             top: -10px;
             left: -10px;
-            animation-delay: 0.2s;
         }
 
         .button::after {
             bottom: -10px;
             right: -10px;
-            animation-delay: 0.4s;
         }
 
         @keyframes sparkle {
@@ -166,21 +173,23 @@
         }
     </style>
 </head>
+
 <body>
 
-    <!-- Hexagonal text container -->
     <div class="hexagon-container">Richie Gullivard</div>
 
-    <!-- Contenuto principale -->
     <div class="content">
         <h2>Ma ciao! 👋</h2>
-        <p>Siamo Anna e Richie, benvenuto/a nel nostro mondo! <br><br> Qui troverai avventure, immagini colorate e tante sorprese. 😊</p>
-        
-        <!-- Pulsanti con effetto rotazione e scintille -->
-        <a href="file:///Users/anna.marchetto/Desktop/New%20Sito%20Richie/giochirichie.html" class="button btn1">Gioca con noi!</a>
-        <a href="file:///Users/anna.marchetto/Desktop/New%20Sito%20Richie/libri%20Richie.html" class="button btn2">I miei libri</a>
-
+        <p>
+            Siamo Anna e Richie, benvenuto/a nel nostro mondo! <br><br>
+            Qui troverai avventure, immagini colorate e tante sorprese 😊
+        </p>
     </div>
+
+    <!-- PULSANTI -->
+    <a href="conosci-richie.html" class="button">Conosci Richie</a>
+    <a href="avventure.html" class="button">Scopri le avventure</a>
+    <a href="eventi.html" class="button">Eventi</a>
 
 </body>
 </html>
