--- a/Pagina principale Richie.html
+++ b/Pagina principale Richie.html
@@ -91,23 +91,27 @@
         }
 
         /* PULSANTI STATICI */
-        .button {
-            padding: 40px;
-            min-width: 190px;
-            min-height: 190px;
-            background-color: #ffd700;
-            color: #0000ff;
-            text-decoration: none;
-            border-radius: 50%;
-            border: 2px solid black;
-            font-weight: bold;
-            font-size: 1.4em;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.25);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+.button {
+    padding: 18px 32px;
+    min-width: 190px;
+    background-color: #ffd700;        /* giallo */
+    color: #0000ff;
+    text-decoration: none;
+    border-radius: 999px;             /* 🔵 forma ovale */
+    border: 2px solid black;
+    font-weight: bold;
+    font-size: 1.2em;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.25);
+    transition: 
+        background-color 0.25s ease,
+        transform 0.2s ease,
+        box-shadow 0.25s ease;
+    cursor: inherit; /* mantiene il cursore zoccolo */
+}
         }
 
         .button:hover {
